# videoeditors

./: Cargo.toml  README.md
assets/: sample.m4v
examples/: basic.rs
src/: editor.rs  ffmpeg.rs  lib.rs  source.rs
